avcodec/mpegvideo_enc: ensure lmin is smaller than lmax

Fixes ticket #10234

Signed-off-by: James Almer <jamrial@gmail.com>